--- a/www/index.html
+++ b/www/index.html
@@ -137,7 +137,7 @@
 		
 		<div data-role="content">
 		<video id="myMovie01" controls fullscreen width="100%" height="100%" poster="icon.png">
-			<source src="https://github.com/stbyrne/lp_mobile_ios_iphone/tree/master/www/videos/Screen_01.mp4" type="video/mp4">
+			<source src="videos/Screen_01.mp4" type="video/mp4">
 		Video Not Supported!
 		</video>
 			
