--- a/www/index.html
+++ b/www/index.html
@@ -137,7 +137,7 @@
 		
 		<div data-role="content">
 		<video id="myMovie01" controls fullscreen width="100%" height="100%" poster="icon.png">
-			<source src="videos/Screen_01.mp4" type="video/mp4">
+			<source src="http://www.skillpad.com/uploads/videos/Screen_01.mp4" type="video/mp4">
 		Video Not Supported!
 		</video>
 			
@@ -161,7 +161,7 @@
 		</div>
 		<div data-role="content">
 			<video id="myMovie02" controls width="100%" height="100%" poster="icon.png">
-				<source src="videos/Screen_02.mp4" type="video/mp4">
+				<source src="http://www.skillpad.com/uploads/videos/Screen_02.mp4" type="video/mp4">
 			</video>
 		
 		</div>
@@ -185,7 +185,7 @@
 		</div>
 		<div data-role="content">
 			<video id="myMovie03" controls width="100%" height="100%" poster="icon.png">
-				<source src="videos/Screen_03.mp4" type="video/mp4">
+				<source src="http://www.skillpad.com/uploads/videos/Screen_03.mp4" type="video/mp4">
 			</video>
 		
 		</div>
@@ -209,7 +209,7 @@
 		</div>
 		<div data-role="content">
 			<video id="myMovie04" controls width="100%" height="100%" poster="icon.png">
-				<source src="videos/Screen_04.mp4" type="video/mp4">
+				<source src="http://www.skillpad.com/uploads/videos/Screen_04.mp4" type="video/mp4">
 			</video>
 		
 		</div>
@@ -233,7 +233,7 @@
 		</div>
 		<div data-role="content">
 			<video id="myMovie05" controls width="100%" height="100%" poster="icon.png">
-				<source src="videos/Screen_05.mp4" type="video/mp4">
+				<source src="http://www.skillpad.com/uploads/videos/Screen_05.mp4" type="video/mp4">
 			</video>
 		
 		</div>
