--- a/www/index.html
+++ b/www/index.html
@@ -213,7 +213,7 @@
 		</div>
 		<div data-role="content">
 			<video id="myMovie04" controls width="100%" height="100%" poster="icon.png">
-				<source src="http://www.skillpad.com/uploads/videos/Screen_04.mp4" type="video/mp4">
+				<source src="videos/Screen_04.mp4" type="video/mp4">
 			</video>
 		
 		</div>
