--- a/www/index.html
+++ b/www/index.html
@@ -93,11 +93,11 @@
 			</ul>
 		</div>
 		
-		<div data-role="footer" data-position="fixed">
+		<div data-role="footer" data-position="fixed" >
 		<div data-role="navbar" data-iconpos="right">
 			<ul>
-				<li><a href="#log" id="logButton" data-role="button" data-icon="gear">Login</a></li>
-				<li><a href="#menu" id="menuButton" data-role="button" data-icon="bars">Menu</a></li>
+				<li><a href="#log" id="logButton" data-role="button" data-icon="gear" data-theme="b">Login</a></li>
+				<li><a href="#menu" id="menuButton" data-role="button" data-icon="bars" data-theme="a">Menu</a></li>
 			</ul>
 		</div>
 		</div>
@@ -115,7 +115,7 @@
 		<div data-role="content">
 		<div data-role="controlgroup" data-corners="false">
 		<input type="text" />
-		<a href="#home" id="submit" data-role="button" data-theme="a">Submit</a>
+		<a href="#home" id="submit" data-role="button" data-theme="b">Submit</a>
 		</div>
 			
 		</div>
