--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
 <body onload="onBodyLoad()" >
 	<div class="app" id="home" data-role="page">
 	
-		<div class="title" data-role="header" data-position="fixed" data-theme="c">
+		<div id="mainHeader" class="title" data-role="header" data-position="fixed" data-theme="c">
             <div>
                 <h3 id="mainTitle" class="pull-left">Skillpad LP Mobile<img id="logo" src="images/logo.png"/></h1>
             </div>
